--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -105,6 +105,13 @@ section h2{
 	text-align: center;
 }
 
+section h3 {
+    font-size: 22px;
+    font-weight: normal;
+    text-align: left;
+    margin-top: 22px;
+}
+
 .inner{
 	width: 94%;
 	margin: 0 auto;
@@ -164,13 +171,12 @@ section h2{
 	margin: -5px auto 20px;
 }
 
-#sec02 span img{
-	width: 30%;
-	height: auto;
-/* *****************************************どうかけば？？？
-	display: block;
-*/ }
-
+#sec02 span img {
+    width: 12%;
+    height: auto;
+    margin: 15px 0 40px 0;
+    display: block;
+}
 
 /* SEC03 PRIVACY
 ------------------------------------------------------------*/
