--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -258,13 +258,8 @@ section h3 {
 	margin-bottom: 50px;
 }
 
-#map iframe{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100% !important;
-	height: 100% !important;
-	border: 0;
+#map img{
+	margin-bottom: 20pt
 }
 
 
